--- a/try/Untitled.ipynb
+++ b/try/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,26 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "flatten_5 (Flatten)          (None, 784)               0         \n",
+      "flatten (Flatten)            (None, 784)               0         \n",
       "_________________________________________________________________\n",
-      "dense_15 (Dense)             (None, 500)               392500    \n",
+      "dense (Dense)                (None, 500)               392500    \n",
       "_________________________________________________________________\n",
-      "dense_16 (Dense)             (None, 500)               250500    \n",
+      "dense_1 (Dense)              (None, 500)               250500    \n",
       "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 500)               0         \n",
+      "dropout (Dropout)            (None, 500)               0         \n",
       "_________________________________________________________________\n",
-      "dense_17 (Dense)             (None, 10)                5010      \n",
+      "dense_2 (Dense)              (None, 10)                5010      \n",
       "=================================================================\n",
       "Total params: 648,010\n",
       "Trainable params: 648,010\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -180,46 +180,32 @@
      "text": [
       "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/15\n",
-      "54000/54000 [==============================] - 6s 105us/sample - loss: 0.2451 - accuracy: 0.9271 - val_loss: 0.0954 - val_accuracy: 0.9717\n",
+      "54000/54000 [==============================] - 5s 85us/sample - loss: 0.2401 - accuracy: 0.9288 - val_loss: 0.1043 - val_accuracy: 0.9705\n",
       "Epoch 2/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0892 - accuracy: 0.9726 - val_loss: 0.0854 - val_accuracy: 0.9743\n",
+      "54000/54000 [==============================] - 4s 76us/sample - loss: 0.0856 - accuracy: 0.9743 - val_loss: 0.0785 - val_accuracy: 0.9752\n",
       "Epoch 3/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0580 - accuracy: 0.9809 - val_loss: 0.0659 - val_accuracy: 0.9815\n",
+      "54000/54000 [==============================] - 4s 78us/sample - loss: 0.0570 - accuracy: 0.9829 - val_loss: 0.0777 - val_accuracy: 0.9760\n",
       "Epoch 4/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0384 - accuracy: 0.9885 - val_loss: 0.0583 - val_accuracy: 0.9830\n",
+      "54000/54000 [==============================] - 4s 80us/sample - loss: 0.0397 - accuracy: 0.9873 - val_loss: 0.0704 - val_accuracy: 0.9803\n",
       "Epoch 5/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0312 - accuracy: 0.9900 - val_loss: 0.0736 - val_accuracy: 0.9807\n",
+      "54000/54000 [==============================] - 4s 76us/sample - loss: 0.0286 - accuracy: 0.9906 - val_loss: 0.0865 - val_accuracy: 0.9765\n",
       "Epoch 6/15\n",
-      "54000/54000 [==============================] - 5s 96us/sample - loss: 0.0239 - accuracy: 0.9919 - val_loss: 0.0703 - val_accuracy: 0.9812\n",
+      "54000/54000 [==============================] - 4s 76us/sample - loss: 0.0228 - accuracy: 0.9924 - val_loss: 0.0856 - val_accuracy: 0.9793\n",
       "Epoch 7/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0204 - accuracy: 0.9929 - val_loss: 0.0625 - val_accuracy: 0.9838\n",
+      "54000/54000 [==============================] - 4s 74us/sample - loss: 0.0215 - accuracy: 0.9927 - val_loss: 0.0830 - val_accuracy: 0.9813\n",
       "Epoch 8/15\n",
-      "54000/54000 [==============================] - 5s 96us/sample - loss: 0.0188 - accuracy: 0.9936 - val_loss: 0.0698 - val_accuracy: 0.9832\n",
+      "54000/54000 [==============================] - 4s 71us/sample - loss: 0.0167 - accuracy: 0.9944 - val_loss: 0.0753 - val_accuracy: 0.9817\n",
       "Epoch 9/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0165 - accuracy: 0.9945 - val_loss: 0.0778 - val_accuracy: 0.9818\n",
+      "54000/54000 [==============================] - 4s 75us/sample - loss: 0.0173 - accuracy: 0.9942 - val_loss: 0.0803 - val_accuracy: 0.9823\n",
       "Epoch 10/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0145 - accuracy: 0.9950 - val_loss: 0.0807 - val_accuracy: 0.9825\n",
+      "54000/54000 [==============================] - 4s 77us/sample - loss: 0.0105 - accuracy: 0.9964 - val_loss: 0.0963 - val_accuracy: 0.9798\n",
       "Epoch 11/15\n",
-      "54000/54000 [==============================] - 5s 100us/sample - loss: 0.0117 - accuracy: 0.9959 - val_loss: 0.0907 - val_accuracy: 0.9812\n",
+      "54000/54000 [==============================] - 4s 78us/sample - loss: 0.0154 - accuracy: 0.9949 - val_loss: 0.0794 - val_accuracy: 0.9818\n",
       "Epoch 12/15\n",
-      "54000/54000 [==============================] - 5s 98us/sample - loss: 0.0172 - accuracy: 0.9945 - val_loss: 0.0755 - val_accuracy: 0.9845\n",
+      "54000/54000 [==============================] - 4s 78us/sample - loss: 0.0135 - accuracy: 0.9958 - val_loss: 0.0944 - val_accuracy: 0.9808\n",
       "Epoch 13/15\n",
-      "54000/54000 [==============================] - 5s 98us/sample - loss: 0.0073 - accuracy: 0.9976 - val_loss: 0.0927 - val_accuracy: 0.9832\n",
-      "Epoch 14/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0075 - accuracy: 0.9974 - val_loss: 0.0890 - val_accuracy: 0.9812\n",
-      "Epoch 15/15\n",
-      "54000/54000 [==============================] - 5s 97us/sample - loss: 0.0088 - accuracy: 0.9972 - val_loss: 0.0960 - val_accuracy: 0.9835\n"
+      "41600/54000 [======================>.......] - ETA: 0s - loss: 0.0086 - accuracy: 0.9971"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fb9044c2e10>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
