--- a/try/Untitled2.ipynb
+++ b/try/Untitled2.ipynb
@@ -151,8 +151,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "50b963ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.718281828459045\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "48a217bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.456946706778105\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The lifetime of a communication system (hours) has the pdf1.13 Problems 61\n",
+    "# f (t) =2*exp(t)/(exp(t)+ 1)^2 t >0\n",
+    "# A random sample of n = 30 units from this density function is tested at the\n",
+    "# same time t = 0 and that the units operate independently.\n",
+    "# (a) What is the probability that at least 2 units will fail within the first hour?\n",
+    "# Determine the expected, and the variance of the, number of failures\n",
+    "# during the first hour.\n",
+    "\n",
+    "from math import *\n",
+    "e=exp(1)\n",
+    "\n",
+    "def comb(a,b):\n",
+    "    res=1\n",
+    "    for i in range(a,b,-1):\n",
+    "            res*=i\n",
+    "    for i in range(1,a-b+1):\n",
+    "        res/=i\n",
+    "    return res\n",
+    "\n",
+    "p=(e-1)/(e+1)\n",
+    "s=0\n",
+    "for f in range(31):\n",
+    "    fx=1\n",
+    "    for i in range(30):\n",
+    "        if i+1<=f:\n",
+    "            fx*=p\n",
+    "        else:\n",
+    "            fx*=(1-p)\n",
+    "    s+=(f-30*p)**2*fx*comb(30,f)\n",
+    "print(s)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "df9c229b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19473329851459148"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R=lambda t:1+2/(1 + exp(t))\n",
+    "(R(1)-R(2))/R(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4960f24d",
    "metadata": {},
    "outputs": [],
    "source": []
