--- a/PPTX_and_charts/control tables.ipynb
+++ b/PPTX_and_charts/control tables.ipynb
@@ -27,7 +27,8 @@
     }
    ],
    "source": [
-    "### np-chart ###\n",
+    "# https://github.com/rsalaza4/Python-for-Industrial-Engineering/blob/master/Quality%20Control%20Charts/np-chart.py\n",
+    "## np-chart ###\n",
     "\n",
     "# Import required libraries\n",
     "import numpy as np\n",
@@ -2299,7 +2300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2313,7 +2314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
