--- a/PPTX_and_charts/grr.ipynb
+++ b/PPTX_and_charts/grr.ipynb
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c31dc8e4",
+   "id": "41623057",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "e3391c73",
+   "id": "279a6156",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e2f2973b",
+   "id": "36f99333",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "2f1bb64f",
+   "id": "ade15d55",
    "metadata": {},
    "outputs": [
     {
@@ -588,29 +588,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "e72c322c",
+   "execution_count": 52,
+   "id": "7868fba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def d2(n,k):\n",
+    "    # https://andrewmilivojevich.com/d2-values-for-the-distribution-of-the-average-range/\n",
+    "    data = [\n",
+    "    [1.414, 1.912, 2.239, 2.481, 2.673, 2.830, 2.963, 3.078, 3.179, 3.263, 3.330, 3.424, 3.491, 3.533],\n",
+    "    [1.279, 1.809, 2.151, 2.405, 2.604, 2.768, 2.906, 3.025, 3.129, 3.221, 3.308, 3.380, 3.449, 3.513],\n",
+    "    [1.197, 1.729, 2.079, 2.379, 2.631, 2.847, 3.036, 3.196, 3.332, 3.449, 3.589, 3.689, 3.825, 3.930],\n",
+    "    [1.206, 1.750, 2.105, 2.366, 2.570, 2.736, 2.877, 2.997, 3.103, 3.197, 3.282, 3.358, 3.428, 3.492],\n",
+    "    [1.171, 1.733, 2.096, 2.398, 2.628, 2.830, 3.021, 2.987, 3.098, 3.173, 3.272, 3.347, 3.424, 3.489],\n",
+    "    [1.181, 1.721, 2.090, 2.333, 2.558, 2.726, 2.867, 2.988, 3.095, 3.189, 3.274, 3.351, 3.421, 3.486],\n",
+    "    [1.173, 1.726, 2.085, 2.349, 2.555, 2.723, 2.864, 2.986, 3.095, 3.187, 3.272, 3.345, 3.419, 3.481],\n",
+    "    [1.166, 1.721, 2.082, 2.346, 2.559, 2.720, 2.862, 2.984, 3.090, 3.187, 3.274, 3.354, 3.417, 3.482],\n",
+    "    [1.164, 1.718, 2.080, 2.344, 2.550, 2.719, 2.860, 2.982, 3.089, 3.184, 3.269, 3.346, 3.416, 3.481],\n",
+    "    [1.160, 1.716, 2.072, 2.343, 2.548, 2.712, 2.858, 2.981, 3.088, 3.183, 3.269, 3.342, 3.414, 3.480],\n",
+    "    [1.157, 1.714, 2.076, 2.340, 2.547, 2.716, 2.858, 2.980, 3.087, 3.182, 3.267, 3.344, 3.415, 3.473],\n",
+    "    [1.155, 1.712, 2.074, 2.3491, 2.546, 2.715, 2.857, 2.979, 3.086, 3.181, 3.266, 3.343, 3.414, 3.479],\n",
+    "    [1.154, 1.710, 2.072, 2.338, 2.545, 2.714, 2.856, 2.978, 3.085, 3.180, 3.266, 3.343, 3.413, 3.478],\n",
+    "    [1.151, 1.709, 2.072, 2.337, 2.545, 2.714, 2.856, 2.978, 3.085, 3.180, 3.265, 3.342, 3.413, 3.478],\n",
+    "    [1.150, 1.708, 2.071, 2.337, 2.544, 2.713, 2.855, 2.977, 3.084, 3.179, 3.265, 3.342, 3.412, 3.477],\n",
+    "    [1.128, 1.693, 2.059, 2.326, 2.534, 2.704, 2.847, 2.970, 3.078, 3.173, 3.259, 3.336, 3.407, 3.472]]\n",
+    "    if n>15:\n",
+    "        n=15\n",
+    "    if k>16:\n",
+    "        k=16\n",
+    "    return data[k-1][n-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "a9edd2c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def EV_stdev(d,op_key=\"Operator\",pt_key=\"Part\",y_key=\"Y\"):\n",
+    "    ranges=[]\n",
+    "    n=0\n",
+    "    for op in d[op_key].unique():\n",
+    "        for part in d[pt_key].unique():\n",
+    "            tmp=d[(d[op_key]==op)&(d[pt_key]==part)]\n",
+    "            n=len(tmp)\n",
+    "            if len(tmp)>0:\n",
+    "                ranges.append(max(tmp[y_key]-min(tmp[y_key])))\n",
+    "    \n",
+    "    rBar= sum(ranges)/len(ranges)\n",
+    "    k=len(ranges)\n",
+    "#     print(n,k)\n",
+    "#     print(d2(n,k))\n",
+    "    return rBar/d2(n,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "0f38f69e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def AV_stdev(d,op_key=\"Operator\",pt_key=\"Part\",y_key=\"Y\"):\n",
+    "    num_of_parts=len(d[pt_key].unique())\n",
+    "    num_of_op=len(d[op_key].unique())\n",
+    "    num_of_tests=len(d)/num_of_parts/num_of_op\n",
+    "    \n",
+    "    op_avgs=[]\n",
+    "    for op in d[op_key].unique():\n",
+    "        tmp=d[d[op_key]==op]\n",
+    "        op_avgs.append(sum(tmp[y_key])/len(tmp))\n",
+    "    R0=max(op_avgs)-min(op_avgs)\n",
+    "    return ((R0/d2(num_of_op,1))**2-EV_stdev(d,op_key=op_key,\n",
+    "            pt_key=pt_key,y_key=y_key)**2/num_of_parts/num_of_tests)**.5\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "23a83f6e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.2879950261620365\n",
+      "3.710144927536232\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(AV_stdev(d))\n",
+    "print(EV_stdev(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "377720df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Part2Part(d,op_key=\"Operator\",pt_key=\"Part\",y_key=\"Y\"):\n",
+    "    part_avgs=[]\n",
+    "    for pt in d[pt_key].unique():\n",
+    "        tmp=d[d[pt_key]==pt]\n",
+    "        part_avgs.append(sum(tmp[y_key])/len(tmp))\n",
+    "    R_part=max(part_avgs)-min(part_avgs)\n",
+    "    return R_part/d2(len(part_avgs),1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "66d4f3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.444847507725378\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Part2Part(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "f3fa9e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GRR(data,op_key=\"Operator\",pt_key=\"Part\",y_key=\"Y\",\n",
+    "\t\tprint_out=True, has_op_col=True):\n",
+    "\n",
+    "\tdef d2(n,k):\n",
+    "\t\t# https://andrewmilivojevich.com/d2-values-for-the-distribution-of-the-average-range/\n",
+    "\t\tdata = [\n",
+    "\t\t[1.414, 1.912, 2.239, 2.481, 2.673, 2.830, 2.963, 3.078, 3.179, 3.263, 3.330, 3.424, 3.491, 3.533],\n",
+    "\t\t[1.279, 1.809, 2.151, 2.405, 2.604, 2.768, 2.906, 3.025, 3.129, 3.221, 3.308, 3.380, 3.449, 3.513],\n",
+    "\t\t[1.197, 1.729, 2.079, 2.379, 2.631, 2.847, 3.036, 3.196, 3.332, 3.449, 3.589, 3.689, 3.825, 3.930],\n",
+    "\t\t[1.206, 1.750, 2.105, 2.366, 2.570, 2.736, 2.877, 2.997, 3.103, 3.197, 3.282, 3.358, 3.428, 3.492],\n",
+    "\t\t[1.171, 1.733, 2.096, 2.398, 2.628, 2.830, 3.021, 2.987, 3.098, 3.173, 3.272, 3.347, 3.424, 3.489],\n",
+    "\t\t[1.181, 1.721, 2.090, 2.333, 2.558, 2.726, 2.867, 2.988, 3.095, 3.189, 3.274, 3.351, 3.421, 3.486],\n",
+    "\t\t[1.173, 1.726, 2.085, 2.349, 2.555, 2.723, 2.864, 2.986, 3.095, 3.187, 3.272, 3.345, 3.419, 3.481],\n",
+    "\t\t[1.166, 1.721, 2.082, 2.346, 2.559, 2.720, 2.862, 2.984, 3.090, 3.187, 3.274, 3.354, 3.417, 3.482],\n",
+    "\t\t[1.164, 1.718, 2.080, 2.344, 2.550, 2.719, 2.860, 2.982, 3.089, 3.184, 3.269, 3.346, 3.416, 3.481],\n",
+    "\t\t[1.160, 1.716, 2.072, 2.343, 2.548, 2.712, 2.858, 2.981, 3.088, 3.183, 3.269, 3.342, 3.414, 3.480],\n",
+    "\t\t[1.157, 1.714, 2.076, 2.340, 2.547, 2.716, 2.858, 2.980, 3.087, 3.182, 3.267, 3.344, 3.415, 3.473],\n",
+    "\t\t[1.155, 1.712, 2.074, 2.3491, 2.546, 2.715, 2.857, 2.979, 3.086, 3.181, 3.266, 3.343, 3.414, 3.479],\n",
+    "\t\t[1.154, 1.710, 2.072, 2.338, 2.545, 2.714, 2.856, 2.978, 3.085, 3.180, 3.266, 3.343, 3.413, 3.478],\n",
+    "\t\t[1.151, 1.709, 2.072, 2.337, 2.545, 2.714, 2.856, 2.978, 3.085, 3.180, 3.265, 3.342, 3.413, 3.478],\n",
+    "\t\t[1.150, 1.708, 2.071, 2.337, 2.544, 2.713, 2.855, 2.977, 3.084, 3.179, 3.265, 3.342, 3.412, 3.477],\n",
+    "\t\t[1.128, 1.693, 2.059, 2.326, 2.534, 2.704, 2.847, 2.970, 3.078, 3.173, 3.259, 3.336, 3.407, 3.472]]\n",
+    "\t\tif n>15:\n",
+    "\t\t\tn=15\n",
+    "\t\tif k>16:\n",
+    "\t\t\tk=16\n",
+    "\t\treturn data[k-1][n-2]\n",
+    "\n",
+    "\tdef EV_stdev(d,op_key=\"Operator\",pt_key=\"Part\",y_key=\"Y\"):\n",
+    "\t\tranges=[]\n",
+    "\t\tn=0\n",
+    "\t\tfor op in d[op_key].unique():\n",
+    "\t\t\tfor part in d[pt_key].unique():\n",
+    "\t\t\t\ttmp=d[(d[op_key]==op)&(d[pt_key]==part)]\n",
+    "\t\t\t\tn=len(tmp)\n",
+    "\t\t\t\tif len(tmp)>0:\n",
+    "\t\t\t\t\tranges.append(max(tmp[y_key]-min(tmp[y_key])))\n",
+    "\t\t\n",
+    "\t\trBar= sum(ranges)/len(ranges)\n",
+    "\t\tk=len(ranges)\n",
+    "\t#     print(n,k)\n",
+    "\t#     print(d2(n,k))\n",
+    "\t\treturn rBar/d2(n,k)\n",
+    "\t\t\n",
+    "\tdef AV_stdev(d,op_key=\"Operator\",pt_key=\"Part\",y_key=\"Y\"):\n",
+    "\t\tnum_of_parts=len(d[pt_key].unique())\n",
+    "\t\tnum_of_op=len(d[op_key].unique())\n",
+    "\t\tnum_of_tests=len(d)/num_of_parts/num_of_op\n",
+    "\t\t\n",
+    "\t\top_avgs=[]\n",
+    "\t\tfor op in d[op_key].unique():\n",
+    "\t\t\ttmp=d[d[op_key]==op]\n",
+    "\t\t\top_avgs.append(sum(tmp[y_key])/len(tmp))\n",
+    "\t\tR0=max(op_avgs)-min(op_avgs)\n",
+    "\t\treturn ((R0/d2(num_of_op,1))**2-EV_stdev(d,op_key=op_key,\n",
+    "\t\t\t\tpt_key=pt_key,y_key=y_key)**2/num_of_parts/num_of_tests)**.5\n",
+    "\t\t\t\n",
+    "\tdef Part2Part(d,op_key=\"Operator\",pt_key=\"Part\",y_key=\"Y\"):\n",
+    "\t\tpart_avgs=[]\n",
+    "\t\tfor pt in d[pt_key].unique():\n",
+    "\t\t\ttmp=d[d[pt_key]==pt]\n",
+    "\t\t\tpart_avgs.append(sum(tmp[y_key])/len(tmp))\n",
+    "\t\tR_part=max(part_avgs)-min(part_avgs)\n",
+    "\t\treturn R_part/d2(len(part_avgs),1)\n",
+    "\t\n",
+    "\tif not has_op_col:\n",
+    "\t\tdata.insert(1,\"Operator\",[0]*len(data),True)\n",
+    "\t\top_key=\"Operator\"\n",
+    "\t\n",
+    "\tEV=EV_stdev(data,op_key=op_key, pt_key=pt_key, y_key=y_key)\n",
+    "\tif has_op_col:\n",
+    "\t\tAV=AV_stdev(data,op_key=op_key, pt_key=pt_key, y_key=y_key)\n",
+    "\telse:\n",
+    "\t\tAV=0\n",
+    "\tPV=Part2Part(data,op_key=op_key, pt_key=pt_key, y_key=y_key)\n",
+    "\tGRR=(EV**2+AV**2)**.5\n",
+    "\tTTL=(GRR**2+PV**2)**.5\n",
+    "\t\n",
+    "\tif print_out:\n",
+    "\t\tprint(\"Source\\t\\t\\tStdDev(SD)\\t6xSD\\t\\t(%SV)\")\n",
+    "\t\tprint(\"Total GRR\\t\\t%0.2f\\t\\t%0.2f\\t\\t%0.2f\"%(GRR,GRR*6,GRR/TTL*100))\n",
+    "\t\tprint(\" EV(repeatability)\\t%0.2f\\t\\t%0.2f\\t\\t%0.2f\"%(EV,EV*6,EV/TTL*100))\n",
+    "\t\tprint(\" AV(reproducibility)\\t%0.2f\\t\\t%0.2f\\t\\t%0.2f\"%(AV,AV*6,AV/TTL*100))\n",
+    "\t\tprint(\"PV(Part to Part)\\t%0.2f\\t\\t%0.2f\\t\\t%0.2f\"%(PV,PV*6,PV/TTL*100))\n",
+    "\t\tprint(\"Total Variation\\t\\t%0.2f\\t\\t%0.2f\\t\\t100.00\"%(TTL,TTL*6))\n",
+    "\t\t\n",
+    "\tres={\"EV\":EV,\"AV\":AV,\"PV\":PV,\"RR\":GRR,\"TV\":TTL}\n",
+    "\treturn res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "746bda39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source\t\t\tStdDev(SD)\t6xSD\t\t(%SV)\n",
+      "Total GRR\t\t5.67\t\t34.02\t\t23.51\n",
+      " EV(repeatability)\t3.71\t\t22.26\t\t15.38\n",
+      " AV(reproducibility)\t4.29\t\t25.73\t\t17.78\n",
+      "PV(Part to Part)\t23.44\t\t140.67\t\t97.20\n",
+      "Total Variation\t\t24.12\t\t144.72\t\t100.00\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1.2234957020057304"
+       "{'EV': 3.710144927536232,\n",
+       " 'AV': 4.2879950261620365,\n",
+       " 'PV': 23.444847507725378,\n",
+       " 'RR': 5.670280127799084,\n",
+       " 'TV': 24.120799144891738}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "4.27/3.49"
+    "GRR(d)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "id": "257ff32f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source\t\t\tStdDev(SD)\t6xSD\t\t(%SV)\n",
+      "Total GRR\t\t4.78\t\t28.69\t\t19.40\n",
+      " EV(repeatability)\t4.78\t\t28.69\t\t19.40\n",
+      " AV(reproducibility)\t0.00\t\t0.00\t\t0.00\n",
+      "PV(Part to Part)\t24.18\t\t145.10\t\t98.10\n",
+      "Total Variation\t\t24.65\t\t147.91\t\t100.00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'EV': 4.782237403928266,\n",
+       " 'AV': 0,\n",
+       " 'PV': 24.18379685610641,\n",
+       " 'RR': 4.782237403928266,\n",
+       " 'TV': 24.652095751983296}"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GRR(d[d[\"Operator\"]==\"A\"].drop(\"Operator\",axis=1),has_op_col=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "1e4023d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Part</th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4</td>\n",
+       "      <td>196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Part    Y\n",
+       "0     1  167\n",
+       "1     1  162\n",
+       "2     2  210\n",
+       "3     2  213\n",
+       "4     3  187\n",
+       "5     3  183\n",
+       "6     4  189\n",
+       "7     4  196\n",
+       "8     5  156\n",
+       "9     5  147"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c1a7a319",
+   "id": "d2bd0ad6",
    "metadata": {},
    "outputs": [],
    "source": []
