--- a/PPTX_and_stats/Binomial.ipynb
+++ b/PPTX_and_stats/Binomial.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "496f1ba7",
    "metadata": {},
    "outputs": [],
@@ -72,6 +72,15 @@
     "def binomial(n,p,x=None,pvalue=None,print_out=True):\n",
     "    rv = binom(n,p)\n",
     "    res=dict()\n",
+    "    \n",
+    "    mean, var, skew, kurt = rv.stats(moments='mvsk')\n",
+    "    stdev=var**.5\n",
+    "    res[\"mean\"],res[\"var\"],res[\"skew\"],res[\"kurt\"],res[\"stdev\"] = \\\n",
+    "        mean, var, skew, kurt, stdev\n",
+    "    \n",
+    "    if print_out:\n",
+    "        print(\"mean = %.2f\\tvariance = %.2f\\tstdev=%.2f\"%(mean,var,stdev))\n",
+    "        print(\"skewness coefficient = %.2f\\tkurtosis coefficient = %.2f\"%(skew,kurt))\n",
     "    \n",
     "    def acc_p(h,t,s,threshold):\n",
     "        p=0\n",
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "69ce5dff",
    "metadata": {},
    "outputs": [
@@ -140,6 +149,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "mean = 18.25\tvariance = 16.92\tstdev=4.11\n",
+      "skewness coefficient = 0.21\tkurtosis coefficient = 0.04\n",
       "Prob at x = 9 is 0.006.\n",
       "Prob 0 to x including x total is 0.011.\n",
       "Prob x to n including x total is 0.995.\n",
@@ -151,7 +162,12 @@
     {
      "data": {
       "text/plain": [
-       "{'px': 0.006231021994835535,\n",
+       "{'mean': 18.25,\n",
+       " 'var': 16.91775,\n",
+       " 'skew': 0.20762831009812205,\n",
+       " 'kurt': 0.035109515154201944,\n",
+       " 'stdev': 4.113119254288648,\n",
+       " 'px': 0.006231021994835535,\n",
        " 'left_acc_p': 0.01103610978073807,\n",
        " 'right_acc_p': 0.9951949122140974,\n",
        " 'equal_tail': {'x_left': 9,\n",
@@ -411,7 +427,7 @@
        "  6.77197007185977e-285]}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "91d1c3a5",
    "metadata": {},
    "outputs": [
@@ -430,6 +446,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "mean = 18.25\tvariance = 16.92\tstdev=4.11\n",
+      "skewness coefficient = 0.21\tkurtosis coefficient = 0.04\n",
       "P value = 0.050\n",
       "Prob 0 to x = 11 including x total is 0.043.\n",
       "Prob x = 26 to n including x total is 0.044.\n",
@@ -702,7 +720,7 @@
        "  6.77197007185977e-285]}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "bcd397dc",
    "metadata": {},
    "outputs": [
@@ -721,6 +739,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "mean = 9.00\tvariance = 8.68\tstdev=2.95\n",
+      "skewness coefficient = 0.32\tkurtosis coefficient = 0.09\n",
       "P value = 0.050\n",
       "Prob 0 to x = 3 including x total is 0.020.\n",
       "Prob x = 15 to n including x total is 0.039.\n",
@@ -993,7 +1013,7 @@
        "  0.0]}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
