--- a/PPTX_and_stats/Chi-square.ipynb
+++ b/PPTX_and_stats/Chi-square.ipynb
@@ -133,12 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "id": "d14f69af",
    "metadata": {},
    "outputs": [],
    "source": [
     "import statistics as stat\n",
+    "import numpy as np\n",
+    "from scipy.stats import chi2\n",
+    "from scipy.stats import f as f_dist\n",
     "\n",
     "def chi2_test_stdev(data_list,s0,print_out=True):\n",
     "    df=len(data_list)-1\n",
@@ -173,12 +176,237 @@
     "    \n",
     "    return {\"p\":p,\"chi_sq\":chi_sq,\"stdev\":stdev,\"df\":df,\"95_chi2_range\":(chi2_low0025,\n",
     "           chi2_high0975),\"95_range_from_P\":(stdev_range_low,stdev_range_high),\"n\":df+1,\n",
-    "           \"95_range_from_S\":std_range_from_S, \"std_from_S_high95\":std_from_S_high95}"
+    "           \"95_range_from_S\":std_range_from_S, \"std_from_S_high95\":std_from_S_high95}\n",
+    "\n",
+    "\n",
+    "def F_test_stdev_2sided(l1,l2,print_out=True):\n",
+    "    var1=stat.variance(l1)\n",
+    "    var2=stat.variance(l2)\n",
+    "    u1=stat.mean(l1)\n",
+    "    u2=stat.mean(l2)\n",
+    "    s1=stat.stdev(l1)\n",
+    "    s2=stat.stdev(l2)\n",
+    "    n1=len(l1)\n",
+    "    n2=len(l2)\n",
+    "    \n",
+    "    f=var1/var2\n",
+    "    dfn,dfd=n1-1,n2-1\n",
+    "    p=(1-f_dist.cdf(f,dfn,dfd))*2\n",
+    "    if p>1:\n",
+    "        f=var2/var1\n",
+    "        dfn,dfd=n2-1,n1-1\n",
+    "        p=(1-f_dist.cdf(f,dfn,dfd))*2\n",
+    "    \n",
+    "    if print_out:\n",
+    "        print(\"u1 = %.2f\\ts1 = %.2f\\tn1 = %d\"%(u1,s1,n1))\n",
+    "        print(\"u2 = %.2f\\ts2 = %.2f\\tn2 = %d\"%(u2,s2,n2))\n",
+    "        print(\"f ratio = %.2f\"%f)\n",
+    "        print(\"dfn = %d\"%(dfn))\n",
+    "        print(\"dfd = %d\"%(dfd))\n",
+    "        print(\"Two-sided test p=%.2f\"%p)\n",
+    "        \n",
+    "    return {\"f\":f,\"p\":p,\"dfn\":dfn,\"dfd\":dfd,\n",
+    "            \"u1\":u1,\"u2\":u2,\"s1\":s1,\"s2\":s2,\"n1\":n1,\"n2\":n2}\n",
+    "    \n",
+    "#####################\n",
+    "#\n",
+    "single_pop_var_test = chi2_test_stdev\n",
+    "\n",
+    "# 从一个population取样，测试这个population\n",
+    "# 的波动等于某一波动的可能性\n",
+    "###########################\n",
+    "#\n",
+    "#\n",
+    "two_pop_var_test = F_test_stdev_2sided\n",
+    "#\n",
+    "# 从两个population取样，测试这两个population的\n",
+    "# 波动一致的可能性\n",
+    "#######################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
+   "id": "61ba04af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u1 = 100.94\ts1 = 23.44\tn1 = 18\n",
+      "u2 = 108.32\ts2 = 21.10\tn2 = 22\n",
+      "f ratio = 1.23\n",
+      "dfn = 17\n",
+      "dfd = 21\n",
+      "Two-sided test p=0.64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'f': 1.2337311950447138,\n",
+       " 'p': 0.6406340501617611,\n",
+       " 'dfn': 17,\n",
+       " 'dfd': 21,\n",
+       " 'u1': 100.94444444444444,\n",
+       " 'u2': 108.31818181818181,\n",
+       " 's1': 23.435699821933863,\n",
+       " 's2': 21.09928088062846,\n",
+       " 'n1': 18,\n",
+       " 'n2': 22}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "females = [95, 123, 74, 145, 64, 112, 107, 67, 81, 91, 142, 84, 85, 92, 112, 112, 115, 116]\n",
+    "males = [84, 128, 79, 98, 105, 95, 79, 93, 99, 119, 92, 112, 99, 113, 128, 111, 105, 104, 106, 128, 134, 172]\n",
+    "\n",
+    "two_pop_var_test(females,males)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "46c269d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u1 = 108.32\ts1 = 21.10\tn1 = 22\n",
+      "u2 = 100.94\ts2 = 23.44\tn2 = 18\n",
+      "f ratio = 1.23\n",
+      "dfn = 17\n",
+      "dfd = 21\n",
+      "Two-sided test p=0.64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'f': 1.2337311950447138,\n",
+       " 'p': 0.6406340501617611,\n",
+       " 'dfn': 17,\n",
+       " 'dfd': 21,\n",
+       " 'u1': 108.31818181818181,\n",
+       " 'u2': 100.94444444444444,\n",
+       " 's1': 21.09928088062846,\n",
+       " 's2': 23.435699821933863,\n",
+       " 'n1': 22,\n",
+       " 'n2': 18}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "females = [95, 123, 74, 145, 64, 112, 107, 67, 81, 91, 142, 84, 85, 92, 112, 112, 115, 116]\n",
+    "males = [84, 128, 79, 98, 105, 95, 79, 93, 99, 119, 92, 112, 99, 113, 128, 111, 105, 104, 106, 128, 134, 172]\n",
+    "\n",
+    "two_pop_var_test(males,females)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "125ebdb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u1 = 60.89\ts1 = 3.61\tn1 = 18\n",
+      "u2 = 63.91\ts2 = 4.31\tn2 = 22\n",
+      "f ratio = 1.42\n",
+      "dfn = 21\n",
+      "dfd = 17\n",
+      "Two-sided test p=0.46\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'f': 1.4228977435390262,\n",
+       " 'p': 0.46440979564922324,\n",
+       " 'dfn': 21,\n",
+       " 'dfd': 17,\n",
+       " 'u1': 60.888888888888886,\n",
+       " 'u2': 63.90909090909091,\n",
+       " 's1': 3.6118903131167936,\n",
+       " 's2': 4.308453384077698,\n",
+       " 'n1': 18,\n",
+       " 'n2': 22}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "males = [60, 61, 51, 65, 63, 58, 59, 63, 64, 65, 64, 68, 64, 69, 67, 65, 66, 62, 66, 68, 68, 70]\n",
+    "females = [59, 61, 55, 66, 52, 60, 61, 56, 61, 62, 65, 63, 62, 62, 64, 65, 60, 62]\n",
+    "\n",
+    "two_pop_var_test(females,males)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "06bed97c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u1 = 63.91\ts1 = 4.31\tn1 = 22\n",
+      "u2 = 60.89\ts2 = 3.61\tn2 = 18\n",
+      "f ratio = 1.42\n",
+      "dfn = 21\n",
+      "dfd = 17\n",
+      "Two-sided test p=0.46\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'f': 1.4228977435390262,\n",
+       " 'p': 0.46440979564922324,\n",
+       " 'dfn': 21,\n",
+       " 'dfd': 17,\n",
+       " 'u1': 63.90909090909091,\n",
+       " 'u2': 60.888888888888886,\n",
+       " 's1': 4.308453384077698,\n",
+       " 's2': 3.6118903131167936,\n",
+       " 'n1': 22,\n",
+       " 'n2': 18}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "males = [60, 61, 51, 65, 63, 58, 59, 63, 64, 65, 64, 68, 64, 69, 67, 65, 66, 62, 66, 68, 68, 70]\n",
+    "females = [59, 61, 55, 66, 52, 60, 61, 56, 61, 62, 65, 63, 62, 62, 64, 65, 60, 62]\n",
+    "\n",
+    "two_pop_var_test(males,females)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "440573e8",
    "metadata": {},
    "outputs": [
@@ -211,15 +439,23 @@
        " 'std_from_S_high95': 4.981083018674999}"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "weights = [82, 89, 81, 90, 84, 83, 88, 80, 85, 90]\n",
-    "chi2_test_stdev([1,2,3,4,5,6,7,8,9,10],3.3333)"
+    "single_pop_var_test([1,2,3,4,5,6,7,8,9,10],3.3333)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90ed990a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
