--- a/PPTX_and_stats/t-test ANOVA.ipynb
+++ b/PPTX_and_stats/t-test ANOVA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "2808d590",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "e91a1e29",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,63 @@
     "        print(\"Two-tailed test p=%.2f\"%p)\n",
     "        print(\"%%95 range of population mean which the samples came from: (%.2f, %.2f)\"%u0_95range)\n",
     "    return {\"t\":t,\"p\":p,\"df\":df,\"mean\":mean,\"stdev\":stdev,\"u0_95range\":u0_95range}\n",
+    "\n",
+    "def paired_t_test(l1,l2,print_out=True):\n",
+    "    diff=[i-j for i,j in zip(l1,l2)]\n",
+    "    res=t_test_1sample(diff,0,print_out=False)\n",
+    "    if print_out:\n",
+    "        print(\"Paired difference:\")\n",
+    "        print(\"   mean = %.2f\"%res[\"mean\"])\n",
+    "        print(\"   stdev = %.2f\"%res[\"stdev\"])\n",
+    "        print(\"   t = %.2f\"%res[\"t\"])\n",
+    "        print(\"   df = %.2f\"%res[\"df\"])\n",
+    "        print(\"   Two-tailed test p=%.2f\"%res[\"p\"])\n",
+    "        print(\"   %%95 range of the difference's mean: (%.2f, %.2f)\"%res[\"u0_95range\"])\n",
+    "    return res\n",
+    "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "226490e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paired difference:\n",
+      "   mean = -0.17\n",
+      "   stdev = 1.03\n",
+      "   t = -0.56\n",
+      "   df = 11.00\n",
+      "   Two-tailed test p=0.59\n",
+      "   %95 range of the difference's mean: (-0.82, 0.49)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'t': -0.5606119105813879,\n",
+       " 'p': 0.5862993069206741,\n",
+       " 'df': 11,\n",
+       " 'mean': -0.16666666666666666,\n",
+       " 'stdev': 1.0298573010888745,\n",
+       " 'u0_95range': (-0.8210067780520978, 0.4876734447187645)}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3, 1, 2, 3, 12, 2, 2, 1, 3, 2]\n",
+    "list2 = [2, 3, 2, 2, 3, 2, 12, 2, 3, 2, 1, 2]\n",
+    "\n",
+    "paired_t_test(list1,list2)"
    ]
   },
   {
